--- a/mp-choir-manage/src/main/resources/application.properties
+++ b/mp-choir-manage/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port=5566
+#\u592A\u5408\u97F3\u4E50openapi\u670D\u52A1\u5730\u5740
+dmh.openapi.url=https://dev-openapi.dmhmusic.com
+#\u4E3A\u6BCF\u4E2A OPENAPI \u7528\u6237\u914D\u7F6E\u7684\u72EC\u4E00\u7684 APIKEY
+dmh.apikey=DKmGQMKBFdaAK
+#\u592A\u5408\u97F3\u4E50\u6240\u6709\u63A5\u53E3\u8C03\u7528\u5730\u5740
+dmh.auth.url=https://dev-openapi.dmhmusic.com/auth/
