--- a/mp-choir-manage/src/main/resources/application.yml
+++ b/mp-choir-manage/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL5Dialect
   redis:
     database: 0
-    host: 192.168.1.3
+    host: 127.0.0.1
     port: 6379
     password: admanageradmanager
     timeout: 5000
@@ -40,8 +40,8 @@ logging:
 
 wechat:
   miniapp:
-    appid: wx0944f8c58b736bac
-    secret: c4adbb3b68a16765fbd98ea72627bf40
+    appid: wxd5d28f91e9c2c730
+    secret: bd68bcdc797acdd91e05083b4d111286
     msgDataFormat: JSON
     
 
