--- a/mp-choir-manage/src/main/resources/application.properties
+++ b/mp-choir-manage/src/main/resources/application.properties
@@ -4,3 +4,5 @@ dmh.openapi.url=https://dev-openapi.dmhmusic.com
 dmh.apikey=DKmGQMKBFdaAK
 #\u592A\u5408\u97F3\u4E50\u6240\u6709\u63A5\u53E3\u8C03\u7528\u5730\u5740
 dmh.auth.url=https://dev-openapi.dmhmusic.com/auth/
+
+dmh.auth.domain=dev-openapi.dmhmusic.com
