--- a/mp-choir-manage/src/main/resources/application.properties
+++ b/mp-choir-manage/src/main/resources/application.properties
@@ -6,3 +6,7 @@ dmh.apikey=DKmGQMKBFdaAK
 dmh.auth.url=https://dev-openapi.dmhmusic.com/auth/
 
 dmh.auth.domain=dev-openapi.dmhmusic.com
+
+upload.file.path=d:/home/shenghesun/temp/mpchoir/
+
+show.file.path=/f/
