--- a/mp-choir-manage/src/main/resources/application.yml
+++ b/mp-choir-manage/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
         max-wait: -1
         max-idle: 8
         min-idle: 0
+    http:
+      multipart:
+        maxFileSize: maxFileSize
+        maxRequestSize: 1000Mb
         
 debug: true
 logging:
