--- a/mp-choir-common/pom.xml
+++ b/mp-choir-common/pom.xml
@@ -10,4 +10,12 @@
   <packaging>jar</packaging>
   <url>http://maven.apache.org</url>
   <description>common</description>
+  	
+  <dependencies>
+  	<dependency>  
+        <groupId>org</groupId>  
+        <artifactId>jaudiotagger</artifactId>  
+        <version>2.0.3</version>  
+    </dependency>  
+  </dependencies>
 </project>
