--- a/mp-choir-manage/src/main/resources/application.properties
+++ b/mp-choir-manage/src/main/resources/application.properties
@@ -1,12 +1,12 @@
+server.host.url=http://192.168.3.28:9090
 #\u592A\u5408\u97F3\u4E50openapi\u670D\u52A1\u5730\u5740
 dmh.openapi.url=https://dev-openapi.dmhmusic.com
 #\u4E3A\u6BCF\u4E2A OPENAPI \u7528\u6237\u914D\u7F6E\u7684\u72EC\u4E00\u7684 APIKEY
 dmh.apikey=DKmGQMKBFdaAK
+#dmh.apikey=GSfNHscxWpmgS
 #\u592A\u5408\u97F3\u4E50\u6240\u6709\u63A5\u53E3\u8C03\u7528\u5730\u5740
 dmh.auth.url=https://dev-openapi.dmhmusic.com/auth/
-
+#dmh.auth.url=https://openapi.dmhmusic.com
 dmh.auth.domain=dev-openapi.dmhmusic.com
-
 upload.file.path=d:/home/shenghesun/temp/mpchoir/
-
 show.file.path=/f/
